--- a/package.json
+++ b/package.json
@@ -62,13 +62,17 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
+    "eslint": "^9.25.0",
     "eslint-config-next": "15.3.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.30.1"
   }
 }
