--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "eslint": "^9.25.0",
     "eslint-config-next": "15.3.1",
     "eslint-plugin-react": "^7.37.5",
