--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "react-dropzone": "^14.3.8",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.55.0",
+    "react-photo-album": "^3.1.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
+    "yet-another-react-lightbox": "^3.23.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
