--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "motion": "^12.7.4",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -67,6 +68,7 @@
     "@eslint/js": "^9.25.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
