--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.30.0",
+    "@blocknote/mantine": "^0.30.0",
+    "@blocknote/react": "^0.30.0",
     "@hookform/resolvers": "^5.0.1",
     "@neondatabase/serverless": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.7",
@@ -69,7 +72,8 @@
     "tw-animate-css": "^1.2.5",
     "vaul": "^1.1.2",
     "yet-another-react-lightbox": "^3.23.0",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
